--- a/GestãoCondomínio/Views/Usuario/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Cadastrar.cshtml
@@ -28,6 +28,7 @@
             <option value="">Selecione</option>
             <option value="@PerfilEnum.Admin">Administrador</option>
             <option value="@PerfilEnum.Funcionario">Funcionário</option>
+            <option value="@PerfilEnum.Morador">Morador</option>
         </select>
         @Html.ValidationMessageFor(x => x.Perfil)
    
