--- a/GestãoCondomínio/Views/Usuario/Editar.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Editar.cshtml
@@ -31,6 +31,7 @@
             <option value="">Selecione</option>
             <option value="@PerfilEnum.Admin">Administrador</option>
             <option value="@PerfilEnum.Funcionario">Funcionário</option>
+            <option value="@PerfilEnum.Morador">Morador</option>
         </select>
         @Html.ValidationMessageFor(x => x.Perfil)
     </div>
