--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -50,7 +50,7 @@
         @if (Model.Perfil == GestãoCondomínio.Enums.PerfilEnum.Morador)
         {
             <li class="nav-item">
-                <a class="nav-link text-light" asp-area="" asp-controller="AcessoMorador" asp-action="">Acessos</a>
+                <a class="nav-link text-light"  asp-action="IndexMoradores">Acessos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
