Alinhamento ao centro botoes view apagar

--- a/GestãoCondomínio/Views/AcessoMorador/Index.cshtml
+++ b/GestãoCondomínio/Views/AcessoMorador/Index.cshtml
@@ -6,8 +6,8 @@
 
 
     <h1 class="display-4">Acessos</h1>
-
-    <table class="table" id="table-acessos">
+    
+    <table class="table-borderless" id="table-acessosMoradores">
         <thead>
             <tr>
                 <th scope="col">Id</th>
@@ -17,7 +17,6 @@
                 <th scope="col">Entrada</th>
                 <th scope="col">Saída</th>
                 <th scope="col">Destino</th>
-                <th scope="col"> </th>
             </tr>
         </thead>
         <tbody>
@@ -33,7 +32,6 @@
                         <td>@acesso.Entrada</td>
                         <td>@acesso.Saida</td>
                         <td>@acesso.Destino</td>
-
                     </tr>
                 }
             }
@@ -43,5 +41,7 @@
             }
         </tbody>
     </table>
+
+
 
 </div>
