--- a/GestãoCondomínio/Views/Morador/Apagar.cshtml
+++ b/GestãoCondomínio/Views/Morador/Apagar.cshtml
@@ -8,5 +8,7 @@
 
 </div>
 
-<a class="btn btn-primary" role="button"asp-controller="Morador" asp-action="Index">Cancelar exclusão</a>
-<a class="btn btn-danger"asp-controller="Morador" asp-action="Deletar" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
+<div class="text-md-center">
+    <a class="btn btn-primary" role="button" asp-controller="Morador" asp-action="Index">Cancelar exclusão</a>
+    <a class="btn btn-danger" asp-controller="Morador" asp-action="Deletar" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
+</div>
