--- a/GestãoCondomínio/Views/Acesso/Apagar.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Apagar.cshtml
@@ -7,6 +7,8 @@
     <h3>Realmente deseja apagar o acesso (@Model.Destino)?</h3>
 
 </div>
+<div  class="text-md-center">
+    <a class="btn btn-primary "  asp-controller="Acesso" asp-action="Index">Cancelar exclusão</a>
+    <a class="btn btn-danger " asp-controller="Acesso" asp-action="Deletar" asp-route-id="@Model.Id">Confirmar exclusão</a>
 
-<a class="btn btn-primary" role="button"asp-controller="Acesso" asp-action="Index">Cancelar exclusão</a>
-<a class="btn btn-danger"asp-controller="Acesso" asp-action="Deletar" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
+</div>
