--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -5,7 +5,7 @@
     <span class="navbar-toggler-icon"></span>
 </button>
 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-    <ul class="navbar-nav flex-grow-1">
+    <ul class="navbar-nav flex-grow-1 ">
         <li class="nav-item">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><h5>Usuário:  @Model.Nome </h5> </a>
         </li>
@@ -50,7 +50,7 @@
         @if (Model.Perfil == GestãoCondomínio.Enums.PerfilEnum.Morador)
         {
             <li class="nav-item">
-                <a class="nav-link text-light"  asp-action="IndexMoradores">Acessos</a>
+                <a class="nav-link text-light" asp-controller="AcessoMorador">Acessos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
