--- a/GestãoCondomínio/Views/Usuario/Apagar.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Apagar.cshtml
@@ -7,6 +7,7 @@
     <h3>Realmente deseja apagar o usuário (@Model.Nome)?</h3>
 
 </div>
-
-<a class="btn btn-primary" role="button"asp-controller="Usuario" asp-action="Index">Cancelar exclusão</a>
-<a class="btn btn-danger"asp-controller="Usuario" asp-action="Deletar" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
+<div class="text-md-center">
+    <a class="btn btn-primary" role="button" asp-controller="Usuario" asp-action="Index">Cancelar exclusão</a>
+    <a class="btn btn-danger" asp-controller="Usuario" asp-action="Deletar" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
+</div>
