--- a/GestãoCondomínio/Views/Login/RedefinirSenha.cshtml
+++ b/GestãoCondomínio/Views/Login/RedefinirSenha.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LoginModel
 @{
     Layout = "_LayoutDeslogado";
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "";
 }
 
 @if (TempData["MensagemErro"] != null)
@@ -20,26 +20,20 @@
             <fieldset>
                 <div class="form-group ls-login-user">
                     @*<label for="userLogin">Usuário</label>*@
-                    <input asp-for="Login" class="form-control" id="login" type="text" placeholder="Usuário">
+                    <input asp-for="Login" class="form-control" id="login" type="text" placeholder="Nome">
                     @Html.ValidationMessageFor(x => x.Login)
                 </div>
 
                 <div class="form-group ls-login-password">
                     @*<label for="senha">Senha</label>*@
-                    <input asp-for="Senha" class="form-control " id="senha" type="password" placeholder="Senha">
+                    <input asp-for="Senha" class="form-control " id="senha" type="email" placeholder="E-mail">
                     @Html.ValidationMessageFor(x => x.Senha)
                 </div>
-
-                <a asp-action="RedefinirSenha" asp-controller="Login" class="ls-login-forgot">Esqueci minha senha</a>
                 <br />
                 <br />
-                <input type="submit" value="Entrar" class="btn btn-primary btn-lg btn-block">
+                <input type="submit" value="Redefinir Senha" class="btn btn-primary btn-lg btn-block">
                 <br />
-                <p class="txt-center ls-login-signup">
-                    Não possui um usuário ?
-                    <a href="#">Cadastre-se agora</a>
-                </p>
-
+                <a class="btn btn-secondary btn-block" asp-action="Index" asp-controller="Login" role="button">Voltar</a>
             </fieldset>
         </form>
     </div>
