Criação view relatorios

--- a/GestãoCondomínio/Views/Funcionario/Editar.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Editar.cshtml
@@ -8,7 +8,7 @@
 
 </div>
 
-<form asp-controller="Funcionario" asp-action="Editar">
+<form asp-controller="Funcionario" asp-action="Editar" class="Form-Container">
     <input  type="hidden" asp-for="Id"/>
     <div class="form-group">
         <label for="nome">Nome</label>
