--- a/GestãoCondomínio/Views/Morador/Cadastrar.cshtml
+++ b/GestãoCondomínio/Views/Morador/Cadastrar.cshtml
@@ -38,8 +38,8 @@
         @Html.ValidationMessageFor(x=>x.Email)
    
     
-        <label for="apartamento">Apartamento</label>
-        <input type="text" asp-for="Apartamento" class="form-control" placeholder="Digite o apartamento do morador">
+        <label for="apartamento">Residência</label>
+        <input type="text" asp-for="Apartamento" class="form-control" placeholder="Digite a residência do morador">
         @Html.ValidationMessageFor(x=>x.Apartamento)
     </div>
     <br />
