--- a/GestãoCondomínio/Views/Login/Index.cshtml
+++ b/GestãoCondomínio/Views/Login/Index.cshtml
@@ -18,27 +18,20 @@
             <h2 class="text-center">login</h2>
             <br />
             <fieldset>
-                <div class="form-group ls-login-user">
+                <div class="form-group">
                     @*<label for="userLogin">Usuário</label>*@
                     <input asp-for="Login" class="form-control" id="login" type="text" placeholder="Usuário">
                     @Html.ValidationMessageFor(x => x.Login)
                 </div>
 
-                <div class="form-group ls-login-password">
+                <div class="form-group">
                     @*<label for="senha">Senha</label>*@
                     <input asp-for="Senha" class="form-control " id="senha" type="password" placeholder="Senha">
                     @Html.ValidationMessageFor(x => x.Senha)
                 </div>
-
-                <a asp-action="RedefinirSenha" asp-controller="Login" class="ls-login-forgot">Esqueci minha senha</a>
-                <br />
-                <br />
                 <input type="submit" value="Entrar" class="btn btn-primary btn-lg btn-block">
                 <br />
-                <p class="txt-center ls-login-signup">
-                    Não possui um usuário ?
-                    <a href="#">Cadastre-se agora</a>
-                </p>
+                <a asp-action="RedefinirSenha" asp-controller="Login" class="ls-login-forgot">Esqueci minha senha</a>
 
             </fieldset>
         </form>
