--- a/GestãoCondomínio/Views/Morador/Index.cshtml
+++ b/GestãoCondomínio/Views/Morador/Index.cshtml
@@ -36,7 +36,7 @@
                 <th scope="col">CPF</th>
                 <th scope="col">Telefone</th>
                 <th scope="col">Email</th>
-                <th scope="col">Apartamento</th>
+                <th scope="col">Residência</th>
                 <th scope="col"> </th>
             </tr>
         </thead>
