--- a/GestãoCondomínio/Views/BuscaAcesso/Index.cshtml
+++ b/GestãoCondomínio/Views/BuscaAcesso/Index.cshtml
@@ -1,77 +1,69 @@
 ﻿@{
-    ViewData["Title"] = "Busca simples";
+    ViewData["Title"] = "Relatório de Acesso";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="text-sm-center">@ViewData["Title"]</h2>
 
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-                <div class="form-group">
-                    <label for="minDate">Min Date</label>
-                    <input type="date" class="form-control" name="minDate" value=@ViewData["minDate"] />
-                </div>
-                <div class="form-group">
-                    <label for="maxDate">Max Date</label>
-                    <input type="date" class="form-control" name="maxDate" value=@ViewData["maxDate"] />
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Filter</button>
-        </form>
+<form class="form-inline justify-content-center" role="search">
+    <div class="form-group">
+        <label for="minDate">Data Inicial<br /></label>
+        <br />
+        <input type="date" class="form-control " name="minDate" value=@ViewData["Data Inicial"] />
     </div>
-</nav>
+    <br />
+    <div class="form-group">
+        <label for="maxDate">Data Final</label>
+        <input type="date" class="form-control" name="maxDate" value=@ViewData["Data Final"] />
+        <br />
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </div>
+
+</form>
+
+
 <div class="panel panel-primary">
-    
+
     <div class="panel-body">
         <table class="table table-striped table-hover">
             <thead>
                 <tr class="success">
                     <th>
-                        
+                        Id
                     </th>
                     <th>
-                      
+                        Veículo
                     </th>
                     <th>
-                       
+                        Condutor
                     </th>
                     <th>
-                      
+                        Documento
                     </th>
                     <th>
-                       
+                        Entrada
                     </th>
                     <th>
-                       
+                        Saída
                     </th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            
-                        </td>
-                        <td>
-                            
-                        </td>
-                        <td>
-                            
-                        </td>
-                        <td>
-                           
-                        </td>
-                        <td>
-                           
-                        </td>
-                        <td>
-                            
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+
+        </tbody>
+    </table>
+</div>
 </div>
