--- a/GestãoCondomínio/Views/Funcionario/Editar.cshtml
+++ b/GestãoCondomínio/Views/Funcionario/Editar.cshtml
@@ -8,33 +8,30 @@
 
 </div>
 
-<form asp-controller="Funcionario" asp-action="Editar" class="Form-Container">
+<form asp-controller="Funcionario" asp-action="Editar">
     <input  type="hidden" asp-for="Id"/>
-    <div class="form-group">
+    <div class="Form-Container">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do funcionário">
         @Html.ValidationMessageFor(x => x.Nome)
-    </div>
-    <div class="form-group">
+    
         <label for="Rg">RG</label>
         <input type="text" asp-for="RG" class="form-control" placeholder="Digite o RG do funcionário">
         @Html.ValidationMessageFor(x => x.RG)
-    </div>
-    <div class="form-group">
+   
         <label for="funcao">Função</label>
         <input type="text" asp-for="Funcao" class="form-control" placeholder="Digite a função do funcionário">
         @Html.ValidationMessageFor(x => x.Funcao)
-    </div>
-    <div class="form-group">
+   
         <label for="telefone">Telefone</label>
         <input type="text" asp-for="Telefone" class="form-control" placeholder="Digite o telefone do funcionário">
         @Html.ValidationMessageFor(x => x.Telefone)
-    </div>
-    <div class="form-group">
+  
         <label for="descricao">Descrição</label>
         <input type="text" asp-for="Descricao" class="form-control" placeholder="Digite a descrição">
         @Html.ValidationMessageFor(x => x.Telefone)
     </div>
+    <br />
 
     <button type="submit" class="btn btn-primary">Editar</button>
     <a class="btn btn-secondary" asp-controller="Funcionario" asp-action="Index" role="button">Voltar</a>
