--- a/GestãoCondomínio/Views/Usuario/Editar.cshtml
+++ b/GestãoCondomínio/Views/Usuario/Editar.cshtml
@@ -13,19 +13,15 @@
 <form asp-controller="Usuario" asp-action="Editar" method="post">
 
     <input type="hidden" asp-for="Id" />
-    <div class="form-group">
+    <div class="Form-Container">
         <label for="nome" class="form-label">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do usuário">
         @Html.ValidationMessageFor(x => x.Nome)
-    </div>
 
-    <div class="form-group">
         <label for="nome" class="form-label">E-mail</label>
         <input type="text" asp-for="Email" class="form-control" placeholder="Digite o e-mail do usuário">
         @Html.ValidationMessageFor(x => x.Email)
-    </div>
-
-    <div class="form-group">
+   
         <label for="nome" class="form-label">Perfil</label>
         <select asp-for="Perfil" class="form-control">
             <option value="">Selecione</option>
@@ -36,6 +32,6 @@
         @Html.ValidationMessageFor(x => x.Perfil)
     </div>
     <br />
-    <button type="submit" class="btn btn-primary btn-block">Editar</button>
-    <a class="btn btn-secondary btn-block" asp-action="Index" asp-controller="Usuario" role="button">Voltar</a>
+    <button type="submit" class="btn btn-primary ">Editar</button>
+    <a class="btn btn-secondary" asp-action="Index" asp-controller="Usuario" role="button">Voltar</a>
 </form>
