--- a/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
+++ b/GestãoCondomínio/Views/Shared/Components/Menu/Default.cshtml
@@ -32,7 +32,7 @@
                 <a class="nav-link text-light" asp-area="" asp-controller="Acesso" asp-action="">Acessos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-light" asp-area="" asp-controller="BuscaAcesso" asp-action="Index">Relatórios</a>
+                <a class="nav-link text-light" asp-area="" asp-controller="BuscaAcesso" asp-action="BuscaAcesso">Relatórios</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
