--- a/GestãoCondomínio/Views/BuscaAcesso/BuscaAcesso.cshtml
+++ b/GestãoCondomínio/Views/BuscaAcesso/BuscaAcesso.cshtml
@@ -8,7 +8,7 @@
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-        <form class="navbar-form navbar-left" role="search" asp-controller="BuscaAcesso">
+        <form class="navbar-form form-inline" role="search"  asp-controller="BuscaAcesso">
             <div class="form-group">
                 <div class="form-group">
                     <label for="minDate">Data Inicial</label>
